--- a/src/app/components/main/main.component.html
+++ b/src/app/components/main/main.component.html
@@ -1,7 +1,7 @@
 <div *ngFor="let launchProgram of launchPrograms" class="launchPrograms">
     <div class='col-md-3'>
         <div class="mission-box card" style="width: 18rem;">
-            <!-- <img class="card-img-top" [src] = "launchProgram.links.mission_patch" alt="mission-1"> -->
+         <img class="card-img-top" [src] = "launchProgram.links.mission_patch" alt="mission-1"> 
             <div class="mission-desp">
                 <h5 class='card-title'>{{launchProgram.mission_name}} #{{launchProgram.flight_number}}</h5>
                 <div><strong>Mission id:</strong> 
