--- a/src/app/components/filter-years/filter-years.component.html
+++ b/src/app/components/filter-years/filter-years.component.html
@@ -1,17 +1,17 @@
 <table class="table table-striped">
   <tr>
     <td><button (click)="applyFilterYear('2006')" class="btn">2006</button></td>
-    <td><button class="btn">2007</button></td>   
+    <td><button (click)="applyFilterYear('2007')" class="btn">2007</button></td>
   
   </tr>
   <tr>
-    <td><button class="btn">2008</button></td>
-    <td><button class="btn">2009</button></td>
+    <td><button (click)="applyFilterYear('2008')" class="btn">2008</button></td>
+    <td><button (click)="applyFilterYear('2009')" class="btn">2009</button></td>
 
   </tr>
   <tr>
-     <td><button class="btn">2010</button></td>
-     <td><button class="btn">2011</button></td>
+     <td><button (click)="applyFilterYear('2010')" class="btn">2010</button></td>
+     <td><button (click)="applyFilterYear('2011')" class="btn">2011</button></td>
     
     
 
@@ -38,3 +38,17 @@
   </tr>
 
 </table>
+<table class="table table-striped">
+  <tr>
+    <thead>
+      <td>Sucessfull Launch</td>
+    </thead>
+  </tr>
+  <tr>
+    <td><button (click)="applyFilterLaunch(true)" class="btn">True</button></td>
+    <td><button (click)="applyFilterLaunch(false)" class="btn">False</button></td>
+
+  </tr>  
+
+</table>
+
